objects/Ecom_Coupon__c.object
<CustomObject>
    <fields>
        <fullName>Ecom_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ecom_Cart_Total_Amount__c</fullName>
        <label>Cart Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Coupon_Max_Usage__c</fullName>
        <label>Coupon Max Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Coupon_Type__c</fullName>
        <label>Coupon Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Ecom_Rule_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Free Shipping</fullName>
                </value>
                <value>
                    <fullName>Free Products</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                    <isActive>false</isActive>
                    <label>Price</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Coupon_Used__c</fullName>
        <label>Coupon Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Customer_Groups__c</fullName>
        <label>Customer Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoned Cart</fullName>
                </value>
                <value>
                    <fullName>Email Subscribers</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Returning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Discount_On_Each_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discount On Each Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ecom_End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ecom_Gift_Card_Balance__c</fullName>
        <label>Gift Card Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Gift_Card_Remaining_Balance__c</fullName>
        <formula>Ecom_Gift_Card_Balance__c  -  Ecom_Used_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Card Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ecom_Include_All_Register_Customers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include All Register Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ecom_Include_Guest_Customers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Guest Customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ecom_Max_Weight__c</fullName>
        <label>Max Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Min_Quantity__c</fullName>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Min_Weight__c</fullName>
        <label>Min Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ecom_Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cart Total</fullName>
                    <default>true</default>
                    <label>Cart Total</label>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>BOGO</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ecom_Store__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <isActive>false</isActive>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>FR</fullName>
                    <isActive>false</isActive>
                    <label>FR</label>
                </value>
                <value>
                    <fullName>US</fullName>
                    <isActive>false</isActive>
                    <label>US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coupon</fullName>
                    <default>true</default>
                    <label>Coupon</label>
                </value>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ecom_Used_Amount__c</fullName>
        <label>Used Amount</label>
        <summarizedField>Ecom_Gift_Card__c.Applied_Amount__c</summarizedField>
        <summaryForeignKey>Ecom_Gift_Card__c.Ecom_Gift_Card_Coupon__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Ecom Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ecom_Store__c</columns>
        <columns>Ecom_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ecom_End_Date__c</columns>
        <columns>Ecom_Rule_Type__c</columns>
        <columns>Ecom_Coupon_Type__c</columns>
        <columns>Ecom_Coupon_Used__c</columns>
        <columns>Ecom_Include_All_Register_Customers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Ecom_Active__c</columns>
        <columns>Ecom_Rule_Type__c</columns>
        <columns>Ecom_Coupon_Type__c</columns>
        <columns>Ecom_Cart_Total_Amount__c</columns>
        <columns>Ecom_Discount_Amount__c</columns>
        <columns>Ecom_Start_Date__c</columns>
        <columns>Ecom_End_Date__c</columns>
        <columns>Ecom_Type__c</columns>
        <columns>Ecom_Max_Weight__c</columns>
        <columns>Ecom_Min_Quantity__c</columns>
        <columns>Ecom_Min_Weight__c</columns>
        <columns>Ecom_Include_Guest_Customers__c</columns>
        <columns>Ecom_Include_All_Register_Customers__c</columns>
        <columns>Ecom_Discount_On_Each_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Columns</label>
    </listViews>
    <nameField>
        <label>Coupon Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ecom Coupons</pluralLabel>
    <recordTypes>
        <fullName>Ecom_Coupon_RecordType</fullName>
        <active>true</active>
        <label>Ecom Coupon RecordType</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>